# Blockchainframe

./: Cargo.toml
kaiblock/: Cargo.toml
kaiblock/crates/bank/: Cargo.toml
kaiblock/crates/bank/src/: instruction.rs  lib.rs  processor.rs  state.rs
kaiblock/crates/bank/src/tests/: basic.rs
kaiblock/crates/blockchain-cli/: Cargo.toml
kaiblock/crates/blockchain-cli/src/: main.rs
kaiblock/crates/blockchain-consensus/: Cargo.toml
kaiblock/crates/blockchain-consensus/src/: mempool.rs  validator.rs
kaiblock/crates/blockchain-core/: Cargo.toml
kaiblock/crates/blockchain-core/src/: block.rs  chain.rs  error.rs  genesis.rs  lib.rs  mempool.rs  state.rs  transaction.rs  types.rs  validation.rs
kaiblock/crates/blockchain-core/src/block/: mod.rs
kaiblock/crates/blockchain-core/src/chain/: mod.rs
kaiblock/crates/blockchain-core/src/concensus/: consensus.rs  difficulty.rs  mod.rs  pos.rs  pow.rs
kaiblock/crates/blockchain-core/src/example/: example.rs
kaiblock/crates/blockchain-core/src/ledger/: block.rs  merkle.rs  transaction.rs
kaiblock/crates/blockchain-core/src/mempool/: errors.rs  mempool.rs  mod.rs  txpool.rs
kaiblock/crates/blockchain-core/src/network/: in_memory.rs  mod.rs
kaiblock/crates/blockchain-core/src/state/: in_memory.rs  mod.rs
kaiblock/crates/blockchain-core/src/storage/: in_memory.rs  mod.rs
kaiblock/crates/blockchain-core/src/transaction/: mod.rs
kaiblock/crates/blockchain-core/src/types/: mod.rs
kaiblock/crates/blockchain-core/src/validation/: pipeline.rs
kaiblock/crates/blockchain-crypto/: Cargo.toml  README.md
kaiblock/crates/blockchain-crypto/src/: lib.rs
kaiblock/crates/blockchain-crypto/src/address/: address.rs  conversion.rs  encoding.rs  mod.rs  types.rs  validation.rs
kaiblock/crates/blockchain-crypto/src/examples/: crypto_usage.rs
kaiblock/crates/blockchain-crypto/src/hash/: merkle.rs  mod.rs  sha256.rs  test.rs  types.rs  utils.rs
kaiblock/crates/blockchain-crypto/src/signature/: keypair.rs  keypairs.rs  mod.rs  signature.rs  types.rs  verification.rs
kaiblock/crates/blockchain-network/: Cargo.toml
kaiblock/crates/blockchain-network/src/: errors.rs  message.rs  mod.rs  network.rs  peer.rs  peer_discovery.rs
kaiblock/crates/blockchain-rpc/: Cargo.toml
kaiblock/crates/blockchain-rpc/src/: errors.rs  handlers.rs  mod.rs  server.rs
kaiblock/crates/blockchain-storage/: Cargo.toml
kaiblock/crates/blockchain-storage/src/: block_store.rs  errors.rs  mod.rs  state_store.rs  storage.rs
kaiblock/crates/blockchain-wallet/: Cargo.toml
kaiblock/crates/blockchain-wallet/src/: address.rs  errors.rs  keypair.rs  mod.rs  transaction.rs
kaiblock/crates/runtime/: Cargo.toml
kaiblock/crates/runtime/src/: executor.rs  lib.rs  program.rs  types.rs
kaiblock/crates/runtime/src/adapters/: bank_adapter.rs
kaiblock/crates/runtime/src/tests/: integration.rs
src/: block.rs  main.rs  merkle_tree.rs
