[package]
name = "chain"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"        # includes SHA-256
blake2 = "0.10"      # for BLAKE2b
hex = "0.4"          # for hex encoding

secp256k1 = {version="0.29.0", features=["rand-std", "hashes-std"] }



serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"