[workspace]
members = [
    "crates/blockchain-core",
    "crates/blockchain-crypto", 
    "crates/blockchain-network",
    "crates/blockchain-consensus",
    "crates/blockchain-storage",
    "crates/blockchain-rpc",
    "crates/blockchain-cli",
    "crates/blockchain-wallet"
]

[workspace.dependencies]
# Common dependencies shared across crates
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Crypto dependencies
sha2 = "0.10"
ed25519-dalek = "1.0"
rand = "0.8"

# Network dependencies
libp2p = "0.50"

# Storage dependencies
rocksdb = "0.20"

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }