[package]
name = "blockchain-core"
version = "0.1.0" 
edition = "2021"

[dependencies]
blockchain-crypto = { path = "../blockchain-crypto" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }