[package]
name = "blockchain-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Our crypto library
blockchain-crypto = { path = "../blockchain-crypto" }

# Serialization and data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections and utilities
indexmap = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"

# Numeric types
primitive-types = { version = "0.12", features = ["serde"] }

# Async support
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"