[package]
name = "blockchain-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cryptographic primitives
sha2 = "0.10"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"

# Base58 encoding for addresses
bs58 = "0.5"

# Error handling
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"